# osparc-simcore-clients

./: .dockerignore  .env-template  .gitignore  .openapi-generator-ignore  .pre-commit-config.yaml  CITATION.cff  Dockerfile  Makefile  NOTES.md  README.md  VERSIONING.md  git_push.sh  index.html  noxfile.py  programs_example.py  requirements-dev.txt  requirements-tests.txt  requirements-tools.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  publish-to-test-pypi.yml
api/: .gitignore  Makefile  config.json  openapi.json
clients/python/test/e2e/ci/e2e/: README.md  pyproject.toml
clients/python/test/e2e/ci/e2e/e2e/: _models.py  _utils.py  cli.py  postprocess.py  preprocess.py
clients/python/test/e2e/ci/e2e/e2e/data/: server_client_compatibility.csv
code_samples/: MetaApi.ipynb  UsersApi.ipynb
docs/: BodyLoginForAccessTokenV0TokenPost.md  DefaultApi.md  Meta.md  MetaApi.md  Profile.md  README.md  StudiesApi.md  Token.md  TokenApi.md  User.md  UserApi.md  UsersApi.md  UsersGroup.md  doc_entrypoint.md  index.html  navbar.md
osparc/: __init__.py  api_client.py  configuration.py  exceptions.py  meta_api.py  rest.py  users_api.py
scripts/: common.Makefile  compute_version.bash  generate_version.bash  get_json_entry.py  gh.bash  install_ci_osparc_python_client.bash  is_semantic_version.py  jq.bash  mypy.bash  openapi-diff.bash  openapi-generator-cli.bash  url-encoder.bash  validate_semantic_version.bash
test/: conftest.py  test_body_login_for_access_token_v0_token_post.py  test_default_api.py  test_file_metadata.py  (+27 more)
(+283 files in other folders)
